--- a/web/index.html
+++ b/web/index.html
@@ -14,7 +14,7 @@
   <!-- circle -->
   
   <svg id="eyeSvg" xmlns="http://www.w3.org/2000/svg" width="1.2vh" height="1.2vh" viewBox="0 0 16 16">
-      <circle cx="8" cy="8" r="8" fill="#0099ad"/>
+      <circle cx="8" cy="8" r="8" fill="#3cc393"/>
       <circle cx="8" cy="8" r="5.5" fill="black" opacity="0.8"/>
   </svg>
     
